feat: add admin user count
