# docs/api.openapi.yaml
@@ -117,6 +117,12 @@ paths:
       summary: Consulta saldo derivado
       responses:
         '200': { $ref: '#/components/responses/Success' }
+  /admin/users/count:
+    get:
+      summary: Consulta o total de usuários
+      responses:
+        '200': { $ref: '#/components/responses/Success' }
+        '403': { $ref: '#/components/responses/Error' }
   /credit-offers:
     get:
       summary: Lista ofertas ativas
